methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: illegal start of simple expression
    while (!estSurBiscuit=) {
                          ^SlugTracking:14: error: ')' expected but '}' found.
} 
^