methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	while (!estSurBiscuit=) {
    	if (estFaceMur()==true) {
      	left();
    	}
      forward();
  		if (getCouleurSol()==Color.green) {
      	brushDown(); forward(); brushUp();
    	} else {
      	backward(); left();
    	}
		}
} 
  
